# imessage-max

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONCEPTS.md  README.md  STRATEGY.md  manifest.json  pyproject.toml  server.json
.codex-plugin/: plugin.json
.github/workflows/: build.yml  release.yml
docs/brainstorms/: 2026-03-13-chat-identity-and-send-model-brainstorm.md  (+1 more)
mcpb/: README.md  manifest.json
plans/: 001-database-error-handling.md  002-characterization-tests-list-tools-and-send.md  003-shared-batched-chat-summary-queries.md  004-attachment-path-containment.md  005-host-binding-explicit-opt-in.md  006-client-error-hygiene.md  007-ci-build-cache.md  008-docs-drift-sweep.md  009-send-verification-spike.md  010-getunread-batched-migration.md  011-capability-contract-spike.md  012-verified-sends-build.md  013-capability-contract-build.md  014-bounded-confirmation-elicitation.md  015-launchd-safe-timers.md  016-narrow-confirmation-gate.md  017-agent-native-send-contract.md  README.md
src/imessage_max/: server.py
swift/: Makefile  Package.resolved  Package.swift  README.md  build-release.sh
tests/: conftest.py  test_contacts.py  test_db.py  test_enrichment_images.py  test_models.py  test_parsing.py  test_phone.py  test_queries.py  test_suggestions.py  test_time_utils.py  test_tool_attachments.py  test_tool_find_chat.py  test_tool_get_active.py  test_tool_get_attachment.py  test_tool_get_context.py  test_tool_get_messages.py  test_tool_list_chats.py  test_tool_search.py  test_tool_send.py  test_tool_unread.py
using-imessage-max/: SKILL.md
(+844 files in other folders)
